# live-poker-bench

./: .env.example  .gitignore  README.md  config-r.json  config.json  hello.py  pyproject.toml
docs/plans/: 2025-12-16-live-poker-bench-prd.md
logs-opensource/tournament_001/: meta.json
logs-opensource/tournament_001/agents/: hand_014.json  hand_026.json  hand_027.json  hand_028.json  hand_037.json  hand_072.json  hand_073.json  hand_078.json  hand_079.json  hand_081.json  hand_082.json  hand_089.json  hand_097.json  hand_104.json  hand_107.json  seat_2_Kimi-K2.json  seat_4_MiniMax-M2.json
logs-opensource/tournament_001/hands/: hand_004.json  hand_010.json  hand_025.json  hand_033.json  hand_035.json  hand_036.json  hand_040.json  hand_046.json  hand_049.json  hand_058.json  hand_059.json  hand_063.json  hand_066.json  hand_068.json  hand_070.json  hand_071.json  hand_072.json  hand_074.json  hand_075.json  hand_085.json  hand_086.json  hand_089.json  hand_091.json  hand_093.json  hand_103.json
logs-opensource/tournament_002/agents/: hand_003.json  hand_009.json  hand_017.json  hand_019.json  (+20 more)
plans/: vite-to-t3-migration-with-trpc-caching.md
replay/: index.html  package.json  pnpm-lock.yaml
replay-t3/: package.json  pnpm-lock.yaml
replay-t3/src/: env.js
replay/public/: data
replay/src/: App.tsx  index.css
src/live_poker_bench/: __init__.py  __main__.py  config.py  config_health.py  main.py
tasks/: task-plan.md  tasks.json
tests/: __init__.py  test_action_parsing.py  test_agents.py  test_betting_round.py  test_engine.py  test_tournament.py
(+2186 files in other folders)
