[project]
name = "live-poker-bench"
version = "0.1.0"
description = "A poker tournament benchmark for evaluating LLM agents on strategic reasoning, adaptation, and decision-making under uncertainty"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "treys",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/live_poker_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
